align exports/opens with upstream